# mcfp

./: .gitignore  README.md  pyproject.toml  test_compiler.py
.github/workflows/: pr-check.yml  publish.yml
demo/: _launcher.py  a.py  b.py
demo/list/: create_list.py  len_list.py
example/: .gitignore  a.py
mcfp/: __init__.py  collecter.py  compiler.py  data_struct.py
mcfp/_built_in/utils/: list_len.mcfunction
mcfp/command/: __init__.py  commands.py  data.py  execute.py  others.py  selector.py  util.py
mcfp/compile/: __init__.py  compiler.py  save2file.py
test/: test_simple.py
