[project]
name = "mcfp"
version = "0.1.4"
description = "A py -> mcfunction transformer"
authors = [{ name = "yuyi2439", email = "yuyi2439@qq.com" }]
license = "MIT"
readme = "README.md"
keywords = ["minecraft", "minecraft-commands", "mcfunction"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/yuyi2439/mcfp"
Repository = "https://github.com/yuyi2439/mcfp"
Documentation = "https://github.com/yuyi2439/mcfp"

[project.optional-dependencies]
dev = ["pytest>=8.3.5,<9.0.0", "isort>=6.0.1,<7.0.0", "black>=25.1.0,<26.0.0"]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
